# pagination-app

./: LICENSE  README.md
add-numbers-text/: add_page_numbers.py  add_page_numbers_image.py  pyproject.toml
pagina/: README.md  foliar.py  foliar0.py  foliar2.py  foliar3.py  main.py  pyproject.toml
