[project]
name = "pagina"
version = "0.1.0"
description = ""
authors = [
    {name = "tuto"}
]
requires-python = ">=3.14"
dependencies = [
    "pymupdf (>=1.27.2.2,<2.0.0.0)",
    "num2words (>=0.5.14,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
